Initial commit - WIP

--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@ AWS_ACCESS_KEY_ID=AKIA5QMIH4RHVEXR3P4F
 AWS_SECRET_ACCESS_KEY=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
 AWS_DEFAULT_REGION=us-east-2
 S3_BUCKET=fq-app-analytics-bucket-1
+GLUE_CATALOG_NAME=iceberg
 
 # Application Configuration
 LOG_LEVEL=INFO
