--- a/.env
+++ b/.env
@@ -7,8 +7,10 @@ MONGO_URI=mongodb+srv://ls_db_user:s47tBnWikllAoe3k@democluster0.j777gry.mongodb
 MONGODB_ATLAS_USERNAME=ls_db_user
 MONGODB_ATLAS_PASSWORD=s47tBnWikllAoe3k
 MONGODB_ATLAS_CLUSTER=democluster0.j777gry.mongodb.net
-MONGODB_DATABASE=ecommerce_db
+MONGODB_DATABASE=fq_app
 MONGODB_COLLECTION=orders
+RAW_NAMESPACE=raw_data
+CURATED_NAMESPACE=curated
 
 # # AWS Configuration
 AWS_ACCESS_KEY_ID=AKIA5QMIH4RHVEXR3P4F
