--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,33 @@
-node_modules/
-*.log
-.venv/
+# .gitignore
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
 venv/
+ENV/
+env.bak/
+venv.bak/
+.env
+.venv
+pip-log.txt
+pip-delete-this-directory.txt
+.tox/
+.coverage
+.pytest_cache/
+htmlcov/
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.idea/
+.vscode/settings.json
+*.log
+logs/
+data/
+spark-warehouse/
+derby.log
+metastore_db/
+*.pyOLD
