--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@
 # MONGO_URI=mongodb://localhost:27017/
 # For Atlas, use: mongodb+srv://username:password@cluster.mongodb.net/database
 # MongoDB Atlas Configuration
-MONGO_URI=mongodb+srv://ls_db_user:s47tBnWikllAoe3k@democluster0.j777gry.mongodb.net/ecommerce_db
-MONGODB_ATLAS_USERNAME=ls_db_user
-MONGODB_ATLAS_PASSWORD=s47tBnWikllAoe3k
+MONGO_URI=mongodb+srv://{username}:{password}@democluster0.j777gry.mongodb.net/ecommerce_db
+MONGODB_ATLAS_USERNAME=username
+MONGODB_ATLAS_PASSWORD=xxxx
 MONGODB_ATLAS_CLUSTER=democluster0.j777gry.mongodb.net
 MONGODB_DATABASE=fq_app
 MONGODB_COLLECTION=orders
@@ -13,8 +13,8 @@ RAW_NAMESPACE=raw_data
 CURATED_NAMESPACE=curated
 
 # # AWS Configuration
-AWS_ACCESS_KEY_ID=AKIA5QMIH4RHVEXR3P4F
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY_ID=xxx
+AWS_SECRET_ACCESS_KEY=xxx
 AWS_DEFAULT_REGION=us-east-2
 S3_BUCKET=fq-app-analytics-bucket-1
 GLUE_CATALOG_NAME=iceberg
@@ -30,9 +30,10 @@ ICEBERG_WAREHOUSE_PATH=s3a://fq-app-analytics-bucket-1/iceberg-warehouse/ecommer
 # s3://fq-app-analytics-bucket-1/iceberg-warehouse/ecommerce_db_raw/
 
 # Jupyter Configuration
-JUPYTER_TOKEN=admin123
+JUPYTER_TOKEN=xxxx
 
 # Spark Configuration
 # SPARK_HOME=C:\spark\spark-3.5.3-bin-hadoop3
 # JAVA_HOME=C:\Program Files\Java\jdk-17
+
 # HADOOP_HOME=C:\hadoop
